--- a/public/index.html
+++ b/public/index.html
@@ -46,5 +46,11 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <script
+      src="//fbstore.sendpulse.com/loader.js"
+      data-sp-widget-id="e5ea2bb6-791a-4d22-a026-41b74bef80d6"
+      async
+    ></script>
   </body>
 </html>
